#
#  Easy-RSA -- This is a small RSA key management package, based on the openssl
#              command line tool, that can be found in the easy-rsa subdirectory
#              of the OpenVPN distribution.  While this tool is primary concerned
#              with key management for the SSL VPN application space, it can also
#              be used for building web certificates.
#
#  Copyright (C) 2002-2010 OpenVPN Technologies, Inc. <sales@openvpn.net>
#  Copyright (C) 2006-2012 Alon Bar-Lev <alon.barlev@gmail.com>
#

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in

dist_doc_DATA = README-2.0
dist_noinst_DATA = README-1.0
